--- a/css/home.css
+++ b/css/home.css
@@ -146,7 +146,8 @@ color: #FFFFFF;
 .item-row .item-item {
   background-color: #FFFFFF;
   width: 20rem;
-  height: 24rem;
+  height: 28rem;
+  margin-bottom: 6rem;
   font-family: 'Lato', sans-serif;
   -webkit-box-shadow: 5px 9px 20px -4px rgba(0,0,0,0.54);
 -moz-box-shadow: 5px 9px 20px -4px rgba(0,0,0,0.54);
