--- a/css/home.css
+++ b/css/home.css
@@ -28,8 +28,6 @@ a, a:link, a:visited {
 
 .center {
   margin: auto;
-  width: 60%;
-  padding: 10px;
   text-align: center;
   line-height: 1.5;
   display: inline-block;
@@ -116,7 +114,7 @@ color: #FFFFFF;
 
 #headBG h1 {
   font-family: "poppins-medium", sans-serif;
-  font-size: 5.2rem;
+  font-size: 7vw;
 }
 
 #headBG #overlay {
@@ -321,3 +319,50 @@ color: #999999;
   width: 80%;
   height: 100%;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  #headBG h1 {
+    font-size: 16vw;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+  #headBG h1 {
+    font-size: 11vw;
+  }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 767px) {
+
+  .container {
+    width: 95%;
+  }
+
+  .item-row .item-item {
+    width: 100%;
+    height: 100%;
+  }
+
+  .item-row .item-item img
+  {
+    position: relative;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
