--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,14 @@ a, a:link, a:visited {
   color: #000000;
 }
 
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 .preload * {
   transition: none !important;
   -webkit-transition: none !important;
@@ -38,6 +46,7 @@ a, a:link, a:visited {
   width: 80%;
   margin: 0 auto;
 }
+
 
 #site-head {
   position: fixed;
@@ -102,7 +111,7 @@ color: #FFFFFF;
 }
 
 #headBG {
-  margin 0;
+  margin: 0;
   height: 100vh;
   line-height: 100vh;
   background: #000000 url("../img/horizon.jpg") no-repeat center;
@@ -134,20 +143,23 @@ color: #FFFFFF;
   letter-spacing: .2rem;
 }
 
+#headBG p span {
+  white-space: nowrap;
+}
+
+#headBG p span:first-child::before, #headBG p span::after {
+  content: "|";
+  text-align: center;
+  display: inline-block;
+  color: rgba(255, 255, 255, 0.3);
+}
+
 #headBG p span:first-child::before {
-    content: "|";
-    text-align: center;
-    display: inline-block;
     padding: 0 2rem 0 1rem;
-    color: rgba(255, 255, 255, 0.3);
 }
 
 #headBG p span::after {
-    content: "|";
-    text-align: center;
-    display: inline-block;
     padding: 0 1rem 0 2rem;
-    color: rgba(255, 255, 255, 0.3);
 }
 
 #headBG.headBG-sub {
@@ -161,7 +173,7 @@ color: #FFFFFF;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 
 .item-row .item-item {
@@ -311,8 +323,13 @@ color: #999999;
   color: #8AC953;
 }
 
+#cpy-rt, #footer-social-links {
+    white-space: nowrap;
+}
+
 #footer-items {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
@@ -338,6 +355,10 @@ color: #999999;
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 767px) {
 
+  #headBG p span:first-child::before, #headBG p span::after {
+    content: none;
+  }
+
   .container {
     width: 95%;
   }
@@ -356,10 +377,27 @@ color: #999999;
     left: 0;
     right: 0;
   }
+
+  #headBG p span {
+    display: block;
+    font-size: 3.5vw;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
+@media only screen and (min-width: 768px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 992px) {
+  .contain, .contain .head-contain {
+    width: 100%;
+  }
+
+  .contain .body-contain {
+    width: 90%;
+  }
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {}
