--- a/css/home.css
+++ b/css/home.css
@@ -343,6 +343,11 @@ line-height: 1.7rem;
 }
 /**/
 
+#pEuler {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
 footer {
   background-color: #151515;
   color: #999999;
