Update entry body formatting

--- a/css/home.css
+++ b/css/home.css
@@ -336,11 +336,16 @@ margin-bottom: 3rem;
   margin: auto;
 }
 
-.contain .body-contain p {
+.contain .body-contain > * {
 margin-bottom: 1rem;
 font-size: 1.3rem;
 line-height: 1.7rem;
 }
+
+.contain .body-contain li {
+  list-style-position: inside;
+}
+
 /**/
 
 #pEuler {
