Change contain property to entry-detail

--- a/css/home.css
+++ b/css/home.css
@@ -342,7 +342,7 @@ font-size: 1.1rem;
 /*MERGE WITH SECT?*/
 /*ONLY IN ENTRY AREAS; RENAME*/
 
-.contain {
+.entry-detail {
   margin-top: 10rem;
   margin-bottom: 10rem;
   width: 55rem;
