--- a/css/home.css
+++ b/css/home.css
@@ -110,7 +110,7 @@ Prevent animations in body until page finishes loading
   text-align: center;
 }
 
-#header.opac {
+#header--opac {
   background-color: rgba(255, 255, 255, 0);
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -119,7 +119,7 @@ Prevent animations in body until page finishes loading
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 
-#header.opac a {
+#header--opac a {
   color: #FFFFFF;
 }
 
