--- a/css/home.css
+++ b/css/home.css
@@ -255,6 +255,29 @@ Prevent animations in body until page finishes loading
   opacity: .85;
 }
 
+#page-head__social-links {
+  margin-top: 3rem;
+}
+
+#page-head__social-links li {
+  display: inline-block;
+  margin: 0 1.3rem;
+  font-size: 2.3rem;
+}
+
+#page-head__social-links li a {
+color: #FFFFFF;
+transition: all 0.3s ease-in-out
+}
+
+#page-head__social-links li a:visited {
+color: #FFFFFF;
+}
+
+#page-head__social-links li a:hover {
+  color: #8AC953;
+}
+
 /* Blog and Project Items
 ============================*/
 .entry__row {
@@ -330,6 +353,26 @@ font-size: 1.1rem;
 
 .sect.grey-bg {
   background-color: #F7F7F7;
+}
+
+.sect__header {
+  font-size: 3.4rem;
+  font-weight: 300;
+  font-family: 'Dosis', sans-serif;
+  text-align: center;
+  overflow: hidden;
+  margin-top: 1.5rem;
+  margin-bottom: 3rem;
+}
+
+.sect__header::before, .sect__header::after {
+  content: "";
+  background-color: #CCCCCC;
+  display: inline-block;
+  height: 1px;
+  position: relative;
+  width: 30%;
+  vertical-align: middle;
 }
 
 /* Entry Pages */
@@ -534,6 +577,14 @@ font-size: 1.1rem;
   #page-head p span:first-child::before
   , #page-head p span::after {
     content: none;
+  }
+
+  #page-head__social-links li {
+    font-size: 8vw;
+  }
+
+  .sect__header {
+    font-size: 7vw;
   }
 }
 
